# cv_matcher

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  env.example  plan.md  pyproject.toml  setup.cfg  tests_description.md
.github/workflows/: ci.yml
docs/: cicd.md  cicd_strategy.md  example_result.txt  index.md  plan.md  technical-documentation.md  test_cases.md
examples/: job_description.txt
src/: analysis.py  client.py  conf.py  entities.py  interfaces.py  logger.py  manage.py  promts.py  routers.py  server.py  services.py
tests/: conftest.py  test_analysis.py  test_client.py  test_entities.py  test_interfaces.py  test_manage.py  test_routers.py  test_server.py  test_services.py
